...
            "state" : "translated",
            "value" : "Reducir la velocidad ×10"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Cerrar"
          }
...
            "state" : "translated",
            "value" : "Barrido de tamaños"
          }
        }
      }
    },
    "Sort" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Ordenación"
          }
...
